--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h3>Filtres</h3>
 				<button class="btn-trier">Trier par prix croissant</button>
 				<br>
-				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<button class="btn-filtrer">Filtrer les pièces abordables</button>
 				<br>
 				<button class="btn-decroissant">Trier par prix décroissant</button>
 				<br>
