--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+			<div class= "abordables">
 			</section>
+			</div>
 		</main>
 	</body>
 </html>
