--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 				<button class="btn-decroissant">Trier par prix décroissant</button>
 				<br>
 				<button class ="btn-nodesc">Filtrer les pieces sans description</button>
+				<br>
+				<p>Prix maximum:</p>
+				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
 			</section>
 
 			<!-- Fiches produits -->
