--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
 			<!-- Fiches produits -->
 			<section class="fiches">
 			<div class= "abordables">
-			</section>
+				<p> Pieces abordables : </p>
 			</div>
+
+			<div class="disponibles">
+			<p>Listes des pieces disponibles</p>
+		</div>
+
+			
+			</section>
+			
 		</main>
 	</body>
 </html>
