--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 				<br>
 				<p>Prix maximum:</p>
 				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
+				
+				<h3>Ajouter un avis </h3>
+				<form class="formulaire-avis">
+					identifiant de la piece:<br>
+					<input type="number" name="piece-id"><br>
+					Nom d'utilisateur :<br>
+					<input type="text" name="utilisateur"><br>
+					avis :<br>
+					<input type="text" name="commentaire"><br>
+					<button>Envoyer</button>
+
+				</form>
 			</section>
 
 			<!-- Fiches produits -->
