--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
 					<input type="text" name="utilisateur"><br>
 					avis :<br>
 					<input type="text" name="commentaire"><br>
+					<input type="number" name="nbEtoiles" min="0"  max="5"><br>
 					<button>Envoyer</button>
 
 				</form>
+				<h3>Données</h3>
+				<button class="btn-maj">Mettre à jour les pièces </button>
 			</section>
 
 			<!-- Fiches produits -->
